# EncoderGPT

./: README.md  pyproject.toml  run.py
egpt/main/: encodergpt.py  model.py  training.py
egpt/utils/: util.py
